fix: default icon position and undo notifier z-index (#1248)

--- a/packages/uhk-web/src/app/components/side-menu/side-menu.component.scss
+++ b/packages/uhk-web/src/app/components/side-menu/side-menu.component.scss
@@ -147,7 +147,6 @@ ul {
     &__fav {
         position: absolute;
         right: 19px;
-        top: 3px;
     }
 
     &__macro_count {
