--- a/packages/uhk-web/src/app/components/undoable-notifier/undoable-notifier.component.scss
+++ b/packages/uhk-web/src/app/components/undoable-notifier/undoable-notifier.component.scss
@@ -1,6 +1,7 @@
 :host {
     position: fixed;
     right: 1em;
+    z-index: 100;
 
     .alert {
         padding: 5px 10px 5px 5px;
